# kwokhaus

./: .gitignore  .gitmodules  README.md
fw/: CMakeLists.txt
fw/src/: CMakeLists.txt  config.h  display.c  display.h  includes.h  main.c  pico_sdk_import.cmake  rtc.c  rtc.h
fw/utils/: flash.sh
model/: podlozka.FCStd
schema/: .gitignore
schema/trigger/: trigger.kicad_pcb  trigger.kicad_prl  trigger.kicad_pro  trigger.kicad_sch
